--- a/neutralino.config.json
+++ b/neutralino.config.json
@@ -6,6 +6,10 @@
   "url": "/",
   "enableServer": true,
   "enableNativeAPI": true,
+  "tokenSecurity": "one-time",
+  "nativeAllowList": [
+      "app.*",
+  ],
   "modes": {
     "window": {
       "title": "myapp",
@@ -21,8 +25,8 @@
     "resourcesPath": "/react-src/build/",
     "extensionsPath": "/extensions/",
     "clientLibrary": "/react-src/public/neutralino.js",
-    "binaryVersion": "4.2.0",
-    "clientVersion": "3.1.0",
+    "binaryVersion": "4.3.0",
+    "clientVersion": "3.2.0",
     "frontendLibrary": {
         "patchFile": "/react-src/public/index.html",
         "devUrl": "http://localhost:3000"
