--- a/neutralino.config.json
+++ b/neutralino.config.json
@@ -26,6 +26,10 @@
     "resourcesPath": "/myapp-react/build/",
     "clientLibrary": "/myapp-react/public/__neutralino_globals.js",
     "binaryVersion": "4.10.0",
-    "clientVersion": "3.8.2"
+    "clientVersion": "3.8.2",
+    "frontendLibrary": {
+        "patchFile": "/myapp-react/public/index.html",
+        "devUrl": "http://localhost:3000"
+    }
   }
 }
