--- a/neutralino.config.json
+++ b/neutralino.config.json
@@ -2,7 +2,7 @@
   "applicationId": "js.neutralino.zero",
   "version": "1.0.0",
   "defaultMode": "window",
-  "documentRoot": "/myapp-react/build/",
+  "documentRoot": "/react-src/build/",
   "url": "/",
   "enableServer": true,
   "enableNativeAPI": true,
@@ -17,18 +17,18 @@
       "height": 500,
       "minWidth": 400,
       "minHeight": 200,
-      "icon": "/myapp-react/public/logo192.png"
+      "icon": "/react-src/public/logo192.png"
     }
   },
   "cli": {
     "binaryName": "myapp",
     "extensionsPath": "/extensions/",
-    "resourcesPath": "/myapp-react/build/",
-    "clientLibrary": "/myapp-react/public/__neutralino_globals.js",
+    "resourcesPath": "/react-src/build/",
+    "clientLibrary": "/react-src/public/__neutralino_globals.js",
     "binaryVersion": "4.10.0",
     "clientVersion": "3.8.2",
     "frontendLibrary": {
-        "patchFile": "/myapp-react/public/index.html",
+        "patchFile": "/react-src/public/index.html",
         "devUrl": "http://localhost:3000"
     }
   }
