--- a/neutralino.config.json
+++ b/neutralino.config.json
@@ -28,7 +28,11 @@
     "clientVersion": "3.12.0",
     "frontendLibrary": {
         "patchFile": "/react-src/public/index.html",
-        "devUrl": "http://localhost:3000"
+        "devUrl": "http://localhost:3000",
+        "projectPath": "/react-src/",
+        "initCommand": "npm install",
+        "devCommand": "npm start",
+        "buildCommand": "npm run build"
     }
   }
 }
