--- a/neutralino.config.json
+++ b/neutralino.config.json
@@ -29,7 +29,7 @@
         "devUrl": "http://localhost:3000",
         "projectPath": "/react-src/",
         "initCommand": "npm install",
-        "devCommand": "BROWSER=none npm start",
+        "devCommand": "npm run start",
         "buildCommand": "npm run build"
     }
   }
